--- a/crates/web-server/Justfile
+++ b/crates/web-server/Justfile
@@ -1,2 +1,2 @@
 watch:
-    cargo watch --workdir /workspace/ -w crates/web-server -w crates/db --no-gitignore -x "run --bin web-server"
+    cargo watch --workdir /workspace/ -w crates/web-server -w crates/db -w crates/web-pages --no-gitignore -x "run --bin web-server"
