--- a/crates/web-server/Cargo.toml
+++ b/crates/web-server/Cargo.toml
@@ -19,5 +19,5 @@ web-assets = { path = "../web-assets" }
 db = { version = "0.1.0", path = "../db" }
 grpc-api = { version = "0.1.0", path = "../grpc-api" }
 validator = { version = "0.15", features = ["derive"] }
-
+lettre = { version = "0.11.19", default-features = false,  features = ["rustls-tls", "smtp-transport", "builder"]  }
 tonic-web = "0"
