--- a/infra-as-code/package.json
+++ b/infra-as-code/package.json
@@ -2,12 +2,15 @@
     "name": "rust-example-app",
     "main": "index.ts",
     "devDependencies": {
-        "@types/node": "^18",
+        "@types/node": "^25.0.3",
         "typescript": "^5.0.0"
     },
     "dependencies": {
-        "@pulumi/kubernetes": "^4.0.0",
+        "@pulumi/hcloud": "^1.29.0",
+        "@pulumi/kubernetes": "^4.24.1",
+        "@pulumi/kubernetesx": "^0.1.6",
         "@pulumi/pulumi": "^3.113.0",
-        "@pulumi/random": "^4.18.4"
+        "@pulumi/random": "^4.18.4",
+        "dotenv": "^17.2.3"
     }
 }
