--- a/infra-as-code/Pulumi.yaml
+++ b/infra-as-code/Pulumi.yaml
@@ -4,7 +4,7 @@ runtime:
   name: nodejs
   options:
     packagemanager: npm
-config:
-  pulumi:tags:
-    value:
-      pulumi:template: kubernetes-typescript
+# config:
+#   pulumi:tags:
+#     value:
+#       pulumi:template: kubernetes-typescript
